# blender-mcp-simplify

./: .cursorignore  .cursorrules  .gitignore  CLAUDE.md  WSL_SETUP.md  config.py  main.py  pyproject.toml  restart_blender_wsl.sh  start_blender_debug.ps1  sync_addon.ps1  sync_to_windows.sh  test_script_execution.py  test_tools.py  wsl_setup.ps1
.cursor/: mcp.json
.cursor/rules/: powershell-rules.mdc  tool-integration.mdc
addon/: __init__.py  test_panel.py
scripts/: create_animated_scene.py  create_enhanced_blender_scene.py  final_test.py  utils.py
src/: prompts.py  resources.py  server.py
src/core/: __init__.py  connection_manager.py  execution_manager.py  types.py
src/scripts/: create_animated_scene.py  create_enhanced_blender_scene.py  final_test.py
src/tools/: __init__.py  all_tools.py  base_operations.py  base_tools.py  code_tools.py  connection_tools.py  mcp_tools.py  polyhaven_tools.py  script_registry.py  utils.py
test_results/: save_test_results.py  test_log_20250605_192706.txt
